fixed tax gap on event show page

--- a/wp-content/themes/gca-intranet-foundation/assets/scss/_show_page.scss
+++ b/wp-content/themes/gca-intranet-foundation/assets/scss/_show_page.scss
@@ -6,10 +6,18 @@
     border-radius: 6px;
 }
 
+.event-meta {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 15px;
+}
+
 .event-details {
     display: flex;
     align-items: center; 
     flex-wrap: wrap;
+    gap: 15px;
 }
 
 .event-details .govuk-body {
